<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">米来商户</string>
    <string name="kuai_pin_produce">快拼科技出品</string>
    <string name="amount">消费总金额</string>
    <!-- http about -->
    <string name="wifi_connect_failed">网络连接失败</string>
    <string name="erro_acount">用户名 由2–32位字符组成</string>
    <string name="erro_http_request">网络请求失败, 代码%d</string>
    <string name="erro_pwd">密码由6–16位英文,数字,下划线和dot(.)符组成</string>
    <string name="erro_email">请输入合法的email地址</string>
    <string name="erro_profile_aboutme_size">个性签名字符不得大于140</string>
    <string name="erro_user_name_or_password">用户名或密码错误</string>
    <string name="erro_duplicate_email">邮箱已被注册</string>
    <string name="erro_old_password">原密码不正确</string>
    <string name="error_empty_input">输入不能为空!</string>
    <string name="erro_duplicate_username">用户名已被注册</string>
    <string name="erro_connection_server">连接服务器错误! 请检查网络配置!</string>
    <string name="erro_request_result_code">服务器请求出错! 代码  %d</string>
    <string name="erro_permission_denied">访问出错啦! 您无权查看! 先关注TA吧! </string>
    <string name="error_low_mem">内存不足，请释放内存重试</string>
    <string name="fail_get_location">无法获取位置信息</string>
    <string name="fail_get_location_refresh">点击重新获取</string>
    <string name="fail_get_print_teamnum">打印号码失败</string>
    <string name="fail_reduce_teamnum">销号失败</string>
    <string name="fail_clear_teamnum">清空排号失败</string>
    <!-- loadable listview -->
    <string name="load_more">显示更多</string>
    <string name="custom_pull_refresh">下拉可以刷新</string>
    <string name="refreshing_and_waiting">正在刷新，请稍候 …</string>
    <string name="custom_recently">最近更新：%s</string>
    <string name="custom_release_to_refresh">松开可以刷新</string>
    <!-- update -->
    <string name="update">升级</string>
    <string name="update_echo">您已经是最新版本了！</string>
    <string name="update_tip">发现新版本: %1$s, 当前版本:%2$s, 立即更新?\n</string>
    <string name="update_description">更新内容: \n%s</string>
    <string name="prompt_must_update">发现新版本: %1$s, 当前版本:%2$s, 此版本已不可用，必须升级！\n</string>
    <string name="confirm">确 认</string>
    <string name="cancel">取 消</string>
    <string name="loading_new_apk">正在下载安装文件，请稍候...</string>
    <string name="fail_get_apk_file">获取安装文件错误! %s </string>
    <string name="fail_check_update">检查更新失败! 请稍后重试</string>
    <string name="fail_load_more">加载失败! %s</string>
    <string name="destorynum">销号</string>
    <string name="shop_contact_us">商家联系</string>
    <string name="service_contract">服务协议</string>
    <string name="copyright">南京快拼信息科技有限公司 版权所有</string>
    <string name="feedback">意见反馈 </string>
    <string name="about_us">关于我们</string>
    <string name="server_clause">服务条款</string>
    <string name="clear_cache">清理缓存</string>
    <string name="quite_login">退出登录</string>
    <string name="prompt_clear_cache">您需要清除缓存</string>
    <string name="clearing_cache">正在清除缓存...</string>
    <string name="clear_cache_failed">清除缓存失败</string>
    <string name="clear_cache_successfully">清除缓存完成</string>
    <string name="capture_help">帮助信息</string>
    <string name="hint_change">点击修改</string>
    <string name="check_update">检查更新</string>
    <string name="about">关于</string>
    <string name="team_num">取号</string>
    <string name="clear_team">清空</string>
    <string name="notice">提示</string>
    <string name="settings">设置</string>
    <string name="version_name_tip">版本: %s</string>
    <string name="missing_mail_application">您没有安装email程序哦</string>
    <string name="missing_tel_application">您没有安装拨号程序哦</string>
    <string name="missing_browser_application">您没有安装浏览器哦</string>
    <string name="choose_send_email"> 选择邮件发送程序</string>
    <string name="contact_tel">4008088017</string>
    <string name="contact_email">support@kplink.cn</string>
    <string name="visit_website">访问米来官网</string>
    <string name="once_more_exit">再按一次退出程序</string>
    <string name="back">返回</string>
    <string name="login">登录</string>
    <string name="logout">注销</string>
    <string name="password">密码</string>
    <string name="hint_password">填写密码</string>
    <string name="hint_old_password">填写旧密码</string>
    <string name="hint_new_password">填写新密码</string>
    <string name="hint_reapt_new_password">再次输入新密码</string>
    <string name="user_name">用户名</string>
    <string name="shop_id">识别码</string>
    <string name="verify">发送验证码</string>
    <string name="nick_name">昵称</string>
    <string name="hint_nick_name">填写昵称</string>
    <string name="hint_shop_id">填写商户识别码</string>
    <string name="register">测试账号申请</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="fail_register">注册失败! %s</string>
    <string name="hint_input_username">填写手机号</string>
    <string name="verify_code">验证码</string>
    <string name="change_pwd">修改密码</string>
    <string name="tag_old_password">旧密码</string>
    <string name="tag_new_password">新密码</string>
    <string name="change_pwd_failed">密码修改失败</string>
    <string name="hint_input_verify_code">填写验证码</string>
    <string name="confirm_new_password">确认设置</string>
    <string name="confirm_change_password">确认修改</string>
    <string name="notify">店内通知</string>
    <string name="order_dish">下单 </string>
    <string name="payment_ticket_detail">收银详情</string>
    <string name="ticket_hist">未完成订单</string>
    <string name="ticket_finish">已完成订单</string>
    <string name="cancelticket">退单</string>
    <string name="sending_v_code">正在发送验证码</string>
    <string name="sent_v_code_fail">发送验证码失败</string>
    <string name="send_wait">请稍后再试</string>
    <string name="tel_digit_error">号码位数不正确</string>
    <string name="prompts_same_tel">与原号码一样！</string>
    <string name="registing">正在发送注册信息</string>
    <string name="reg_failed">注册失败</string>
    <string name="reseting_pwd">正在重置密码</string>
    <string name="reset_pwd_failed">重置密码失败</string>
    <string name="logining">正在登录</string>
    <string name="login_failed">登录失败，请重试</string>
    <string name="submitted_ticket_time_prefix">下单时间：</string>
    <string name="tel_prefix">电话：</string>
    <string name="tag_tel">电话：</string>
    <string name="tag_note">备注：</string>
    <string name="tag_user_note">用户备注：</string>
    <string name="tag_shop_note">商家备注：</string>
    <string name="tag_pay_note">交易单号：</string>
    <string name="prompts_price_accurate">商品价格仅供参考，实际价格以商铺为准</string>
    <string name="prompts_select_dish_done">请喊服务员下单</string>
    <string name="tag_price">价格：</string>
    <string name="please_input_key">请输入搜索关键字</string>
    <string name="prompts_price_unknown">时价</string>
    <string name="unit_rmb">￥</string>
    <string name="total_dishes_param">共%d个商品</string>
    <string name="tag_total_price">总计：￥</string>
    <string name="tag_total_price_orig">原价：￥</string>
    <string name="tag_total_price_sub">立减：￥</string>
    <string name="tag_total_price_done">选好了：￥</string>
    <string name="tag_dish_detail">商品详情</string>
    <string name="unit_dishes">个商品</string>
    <string name="net_shutdown">网断了~</string>
    <string name="check_net_connection">检查网络</string>
    <string name="retry_load_menu">再试一下</string>
    <string name="ticket_detail">订单详情</string>
    <string name="modify">修改</string>
    <string name="submit">提交</string>
    <string name="savetemp">暂存</string>
    <string name="accept">接受</string>
    <string name="reject">拒绝</string>
    <string name="checkout">结账</string>
    <string name="submiting">正在提交...</string>
    <string name="submit_failed">提交失败</string>
    <string name="processing_ticket">正在查询定单状态</string>
    <string name="processing_ticket_failed">定单查询失败</string>
    <string name="check_ticket">核对定单</string>
    <string name="cancel_check_ticket">取消核对</string>
    <string name="continue_check_ticket">继续核对</string>
    <string name="you_are_checking_ticket">您正在核对定单</string>
    <string name="other_is_checking_ticket">%s 正在核对定单</string>
    <string name="canceling_check">正在取消核对</string>
    <string name="cancel_check_failed">取消核对失败</string>
    <string name="tag_sel_table">选择桌号</string>
    <string name="quit">退出</string>
    <string name="login_out">退出登陆</string>
    <string name="prompts_quit">退出应用后，您将不会再收到任何通知，确定退出吗？</string>
    <string name="bind">绑定</string>
    <string name="transaction_summary">交易汇总</string>
    <string name="payway_choose">支付通道选择</string>
    <string name="choose_merchant">选择门店/账户</string>
    <string name="contract_merchant">签约账户</string>
    <string name="merchant_city">南京</string>
    <string name="merchant">南京若客餐饮有限公司</string>
    <string name="store_name">若客咖啡</string>
    <string name="merchant_nickname">ruoke</string>
    <string name="bind_shop">绑定商户</string>
    <string name="sending_bind_req">发送绑定商户请求</string>
    <string name="send_bind_req_failed">发送绑定商户请求失败</string>
    <string name="bind_new_shop">绑定新商户</string>
    <string name="end_order_dish">结束下单</string>
    <string name="takeaway">外卖通知</string>
    <string name="payme">收银</string>
    <string name="teamlist">取号 </string>
    <string name="paid">已付款</string>
    <string name="orderInshop">订单查询</string>
    <string name="orderTakeaway">外卖订单</string>
    <string name="memberMange">会员卡券</string>
    <string name="order_status1">未处理</string>
    <string name="order_status1_2">未验证</string>
    <string name="order_status2">下单中</string>
    <string name="order_status3">未结账</string>
    <string name="order_status4">已完成</string>
    <string name="city_sel">选择城市</string>
    <string name="prompts_invalid_city">亲，小美正在努力开通些城市的服务， 选择已开通城市试试吧！</string>
    <string name="payment_detail">支付明细</string>
    <string name="mpos">POS管理</string>
    <string name="mpos_bluetoothStart">蓝牙启动</string>
    <string name="mpos_signIn">签       到</string>
    <string name="mpos_downloadKey">下载密钥</string>
    <string name="mpos_downloadPara">下载参数</string>
    <string name="mpos_passwordMod">参数修改</string>
    <string name="mpos_left_money">查询余额</string>
    <string name="mpos_account">结 算</string>
    <string name="mpos_print">打 印</string>
    <string name="mpos_landi_manage">LANDI系统管理</string>
    <string name="display_BluetoothSelect">蓝牙设备选择</string>
    <string name="selected_table">选定桌号(已选定3号桌)</string>
    <string name="home">首页</string>
    <string name="vip">会员</string>
    <string name="mine">我的</string>
    <string name="selpaytype">请先选择支付方式</string>
    <string name="backend">商户后台</string>
    <string name="amount_receivable">商家应收金额</string>
    <string name="amount_receivable_info">(销售价格总额-折扣价格总额)</string>
    <string name="amount_paid_up">商家实收金额</string>
    <string name="amount_paid_up_info">(扣除折扣后实际的到账金额)</string>
    <string name="order_quantity">商家订单总笔数</string>
    <string name="amount_refund">商家退款金额</string>
    <string name="refund_quantity">商家退款笔数</string>
    <string name="net_income">商家实收净额(扣除0.6%手续费后的实收)</string>
    <string name="acount_discount">商家实收金额(扣除折扣、卡券、退款)</string>
    <!-- 商户备注 -->


    <!-- payment -->
    <string name="payment_status_1">线上支付</string>
    <string name="payment_status_2">现金支付</string>
    <string name="payment_status_3">刷卡支付</string>
    <string name="payment_status_4">支付宝</string>
    <string name="payment_status_5">微信支付</string>
    <string name="fail_refund">提交退款请求失败</string>
    <!-- mpos -->
    <string name="external_dir">GetSignature</string>
    <!-- 红包 -->
    <string name="coupon_detail">红包详情</string>
    <string name="send_coupon_sn">发送券号</string>
    <string name="title_activity_act_choose_date">ActChooseDate</string>
    <string name="hello_world">Hello world!</string>
    <string name="communicating">正在通信</string>
    <string name="fail_communicate">通信失败</string>

</resources>